# springdocs-mcp-server

./: README.md
spring-mcp-server/: main.py  pyproject.toml
spring-mcp-server/src/spring_mcp_server/: server.py
spring-mcp-server/src/spring_mcp_server/prompts/: batch_prompts.py  migration_prompts.py  spring_prompts.py
spring-mcp-server/src/spring_mcp_server/resources/: batch_breaking_changes.py  batch_registry.py  breaking_changes.py  migration_registry.py  spring_registry.py
spring-mcp-server/src/spring_mcp_server/tools/: batch_migration_guide.py  fetch_page.py  migration_guide.py  openrewrite.py  search.py
