[project]
name = "spring-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
]

[project.scripts]
spring-mcp-server = "spring_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spring_mcp_server"]